Added play2 and new table

--- a/play.html
+++ b/play.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Romeo and Juliet - Act 3, Scene 4</title>
+    <title>The King HenryVI - Act 3, Scene 4</title>
     <link rel="stylesheet" href="shakespeare.css">
 </head>
 <body>
